[workspace]
members = [
    "crates/iceberg-catalog",
    "crates/iceberg-catalog-bin",
    "crates/iceberg-ext",
]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/hansetag/iceberg-catalog"
repository = "https://github.com/hansetag/iceberg-catalog.git"
rust-version = "1.75.0"
license = "Apache-2.0"

[workspace.dependencies]
async-nats = "0.35.1"
async-compression = { version = "^0.4", features = ["tokio", "gzip"] }
figment = { version = "0.10.19", features = ["env"] }
serde = { version = "^1.0", features = ["rc"] }
serde_derive = "^1.0"
serde_with = "^3.4"
serde_json = { version = "^1.0", features = ["raw_value"] }
url = { version = "^2.5", features = ["serde"] }
uuid = { version = "^1.6", features = ["serde", "v4", "v7"] }
reqwest = { version = "^0.12", features = ["json"] }
iceberg = { git = "https://github.com/hansetag/iceberg-rust.git", branch = "tp/pub-viewmetabuilder" }
typed-builder = "^0.18"
strum_macros = "^0.26"
axum = { version = "^0.7" }
axum-extra = { version = "0.9.3" }
async-trait = "^0.1"
env_logger = "^0.11"
itertools = "0.13.0"
log = "^0.4"
http = "^1.1"
derive_more = "^0.99"
flate2 = "^1.0"
lazy_static = "^1.4"
maplit = "1.0.2"
futures = "^0.3"
anyhow = "^1.0"
chrono = "^0.4"
clap = { version = "^4.5", features = ["derive", "env"] }
headers = { version = "^0.4" }
hostname = "0.4.0"
http-body-util = "^0.1"
jwks_client_rs = "0.5.1"
strum = { version = "^0.26", features = ["derive"] }
sqlx = { version = "^0.7", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "json",
    "migrate",
    "uuid",
    "chrono",
] }
tokio = { version = "1", default-features = false, features = [
    "signal",
    "rt-multi-thread",
] }
tower = "^0.4"
tower-http = { version = "^0.5", features = [
    "catch-panic",
    "compression-full",
    "sensitive-headers",
    "timeout",
    "trace",
] }
tracing = { version = "^0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
urlencoding = "^2.1"
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
veil = "0.1.7"
