[package]
name = "iceberg-rest"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Hansetag <info@hansetag.com>"]
license = "Copyright (c) 2024 Hansetag GmbH, all rights reserved"
repository = "https://github.com/hansetag/iceberg-rest-rs"
homepage = "https://github.com/hansetag/iceberg-rest-rs"

[[bin]]
name = "iceberg_rest"
path = "src/main.rs"


[dependencies]
serde = { worspace = true }
serde_derive = { worspace = true }
serde_with = { worspace = true }
serde_json = { worspace = true }
url = { worspace = true }
uuid = { worspace = true, features = ["serde"] }
reqwest = { worspace = true }
validator = { version = "0.18.0", features = ["derive"] }
itertools = { version = "0.12.0" }
