[package]
name = "iceberg-catalog-bin"
resolver = "2"
version = "0.3.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
The default binary of the iceberg-catalog project.
We encourage you to build your own binary with the features you need,
especially incorporating a custom AuthZ Handler.
"""

[[bin]]
name = "iceberg-catalog"
path = "src/main.rs"

[features]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
iceberg-catalog = { path = "../iceberg-catalog", features = ["all"] }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true, features = ['yaml'] }
