[package]
name = "iceberg-catalog-bin"
resolver = "2"
version = "0.4.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
This is Lakekeeper, a catalog for Iceberg tables.
"""

[[bin]]
name = "iceberg-catalog"
path = "src/main.rs"

[features]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
axum = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
iceberg-catalog = { path = "../iceberg-catalog", features = ["all"] }
reqwest = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors", "tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
utoipa = { workspace = true, features = ['yaml'] }
