[package]
name = "iceberg-catalog"
resolver = "2"
version = "0.1.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Implementation of the Iceberg REST Catalog server.
"""

[features]
all = ["sqlx-postgres", "s3-signer", "router", "nats"]
sqlx-postgres = ["sqlx"]
sqlx = ["dep:sqlx"]
s3-signer = ["dep:aws-sigv4", "dep:aws-credential-types"]
router = ["dep:tower-http"]
nats = ["dep:async-nats"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true, optional = true }
async-trait = { workspace = true }
aws-credential-types = { version = "^1.2", optional = true }
aws-sigv4 = { version = "^1.2", optional = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
chrono = { workspace = true }
cloudevents-sdk = { version = "0.7.0" }
derive_more = { workspace = true }
figment = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
iceberg = { workspace = true }
iceberg-ext = { path = "../iceberg-ext", features = ["axum"] }
itertools = { workspace = true }
jsonwebtoken = "9.3.0"
jwks_client_rs = { workspace = true }
lazy_static = { workspace = true }
maplit = { workspace = true }
openssl = { version = '0.10', features = ["vendored"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
sqlx = { workspace = true, optional = true, features = ["tls-rustls"] }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, optional = true, features = [
    "default",
    "request-id",
    "util",
] }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true, features = ["uuid"] }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
veil = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
tower = { workspace = true }
