[package]
name = "iceberg-catalog"
resolver = "2"
version = "0.3.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Implementation of the Iceberg REST Catalog server.
"""

[features]
all = ["sqlx-postgres", "s3-signer", "router", "nats", "slatedb"]
sqlx-postgres = ["sqlx"]
sqlx = ["dep:sqlx"]
s3-signer = ["dep:aws-sigv4", "dep:aws-credential-types"]
router = ["dep:tower-http"]
nats = ["dep:async-nats"]
slatedb = ["dep:slatedb", "dep:object_store"]
default = ["sqlx-postgres", "s3-signer", "router"]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true, optional = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-credential-types = { version = "^1.2", optional = true }
aws-sdk-s3 = { version = "1.42.0" }
aws-sdk-sts = { workspace = true }
aws-sigv4 = { version = "^1.2", optional = true }
axum = { workspace = true }
axum-extra = { workspace = true, features = ["typed-header"] }
axum-prometheus = { workspace = true }
azure_core = { workspace = true }
azure_identity = { workspace = true }
azure_storage = { workspace = true }
azure_storage_blobs = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
cloudevents-sdk = { version = "0.7.0" }
derive_more = { workspace = true }
figment = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
iceberg = { workspace = true }
iceberg-ext = { path = "../iceberg-ext", features = ["axum"] }
itertools = { workspace = true }
jsonwebtoken = "9.3.0"
jwks_client_rs = { workspace = true }
lazy-regex = { workspace = true }
lazy_static = { workspace = true }
lru = { workspace = true }
maplit = { workspace = true }
object_store = { workspace = true, optional = true }
rand = "0.8.5"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
slatedb = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true, features = ["tls-rustls"] }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, optional = true, features = [
    "default",
    "request-id",
    "util",
] }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true, features = ["uuid"] }
utoipa-swagger-ui = { workspace = true }
uuid = { workspace = true }
vaultrs = "0.7.2"
vaultrs-login = "0.2.1"
veil = { workspace = true }

[dev-dependencies]
http-body-util = { workspace = true }
needs_env_var = { workspace = true }
tower = { workspace = true }
tracing-subscriber = { workspace = true }
serde_urlencoded = "0.7.1"
