[package]
name = "iceberg-ext"
version = "0.2.1"
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

description = "Extensions for Apache Iceberg Rust"
keywords = ["iceberg", "rest", "extension"]

[lib]

[features]
all = ['axum']
axum = ['dep:axum']

[dependencies]
axum = { workspace = true, optional = true }
chrono = { workspace = true }
http = { workspace = true }
iceberg = { workspace = true }
log = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
paste = { workspace = true }
heck = { workspace = true }

[dev-dependencies]
lazy_static = { workspace = true }
tokio = { workspace = true }
futures-util = { version = "^0.3" }
