[package]
name = "iceberg-ext"
version = "0.4.1"
edition = { workspace = true }
homepage = { workspace = true }
rust-version = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

description = "Extensions for Apache Iceberg Rust"
keywords = ["iceberg", "rest", "extension"]

[lib]

[features]
all = ['axum']
axum = ['dep:axum']

[dependencies]
axum = { workspace = true, optional = true }
chrono = { workspace = true }
heck = { workspace = true }
http = { workspace = true }
iceberg = { workspace = true }
log = { workspace = true }
paste = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
serde_with = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[dev-dependencies]
futures-util = { version = "^0.3" }
lazy_static = { workspace = true }
tokio = { workspace = true }
