[package]
name = "iceberg-rest-bin"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
The default binary of the iceberg-rest project.
We encourage you to build your own binary with the features you need,
especially incorporating a custom AuthZ Handler.
"""

[[bin]]
name = "iceberg-rest"
path = "src/main.rs"

[features]

[dependencies]
anyhow = { workspace = true }
async-nats.workspace = true
async-trait = { workspace = true }
axum = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
env_logger = { workspace = true }
headers = { workspace = true }
http = { workspace = true }
iceberg-rest-server = { path = "../iceberg-rest-server", features = [
    "sqlx-postgres",
    "api",
    "s3-signer",
    "router",
] }
iceberg-rest-service = { path = "../iceberg-rest-service", features = [
    "tokio",
] }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
