[package]
name = "iceberg-rest-server"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Common interfaces shared between different parts of the configuration.
Does not contain types that are part of the iceberg-rest specification.
"""

[features]
all = ["sqlx-postgres"]
sqlx-postgres = ["sqlx"]
sqlx-postgres-secrets = ["sqlx"]
sqlx = ["dep:sqlx"]

[dependencies]
iceberg-rest-service = { path = "../iceberg-rest-service" }
uuid = { workspace = true }
http = { workspace = true }
sqlx = { workspace = true, optional = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
veil = { workspace = true }
derive_more = { workspace = true }
config = { workspace = true }
url = { workspace = true }
lazy_static = { workspace = true }
serde_json = { workspace = true }
strum_macros = { workspace = true }
strum = { workspace = true }
chrono = { workspace = true }
utoipa = { workspace = true }
anyhow = { workspace = true }
