[package]
name = "iceberg-rest-server"
resolver = "2"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
Common interfaces shared between different parts of the configuration.
Does not contain types that are part of the iceberg-rest specification.
"""

[features]
all = ["sqlx-postgres", "api", "s3-signer", "router"]
sqlx-postgres = ["sqlx"]
sqlx-postgres-secrets = ["sqlx"]
sqlx = ["dep:sqlx"]
api = ["dep:axum"]
s3-signer = ["dep:aws-sigv4", "dep:aws-credential-types"]
router = ["dep:tower-http", "tokio", "iceberg-rest-service/tokio"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
# aws-sdk-s3 = "^1.25"
# aws-config = { version = "^1.3", features = ["behavior-version-latest"] }
aws-credential-types = { version = "^1.2", optional = true }
aws-sigv4 = { version = "^1.2", optional = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true }
cloudevents-sdk = { version = "0.7.0", features = ["nats"] }
config = { workspace = true }
derive_more = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
iceberg = { workspace = true }
iceberg-ext = { path = "../iceberg-ext" }
iceberg-rest-service = { path = "../iceberg-rest-service" }
lazy_static = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
sqlx = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tokio = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true, features = ["uuid"] }
uuid = { workspace = true }
veil = { workspace = true }
