[package]
name = "datafusion"
resolver = "2"
version = "0.1.0"
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
description = """
The default binary of the iceberg-catalog project.
We encourage you to build your own binary with the features you need,
especially incorporating a custom AuthZ Handler.
"""

[[bin]]
name = "datafusion-test"
path = "src/main.rs"

[features]

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
clap = { version = "^4.5", features = ["derive"] }
headers = { workspace = true }
http = { workspace = true }
iceberg-catalog = { path = "../../crates/iceberg-catalog", features = ["all"] }
iceberg-ext = { path = "../../crates/iceberg-ext", features = ["all"] }
iceberg-catalog-rest = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
datafusion = { version = "39.0.0" }
ctor = { version = "0.2.8" }
